Implement Pufferfish-derived SIMD map rendering